Finilizing Julia notebook

--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
   - pip>=20.3
   - pip:
     - git+https://github.com/NREL/tf-melt.git
-    - pytorch
+    - torch
     - torchvision
     - matplotlib
     - scikit-learn
