work in progress for hyperparameter tuning

--- a/environment.yml
+++ b/environment.yml
@@ -9,14 +9,15 @@ dependencies:
   - jupyter
   - pip>=20.3
   - pip:
-    - git+https://github.com/NREL/tf-melt.git
-    - torch
-    - torchvision
-    - torchinfo
-    - matplotlib
-    - scikit-learn
-    # - jupyter_contrib_nbextensions
-    - black
-    - isort
-    - flake8
-    - sphinx
+      - git+https://github.com/NREL/tf-melt.git
+      - git+https://github.com/NREL/pt-melt.git
+      # - torch
+      # - torchvision
+      - torchinfo
+      - matplotlib
+      - scikit-learn
+      # - jupyter_contrib_nbextensions
+      - black
+      - isort
+      - flake8
+      - sphinx
