Adding pandas to force pip installation
installing pandas with conda cause problems with tensorflow

--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
       - torchinfo
       - matplotlib
       - scikit-learn
+      - pandas
       # - jupyter_contrib_nbextensions
       - black
       - isort
